--- a/public/index.html
+++ b/public/index.html
@@ -5,87 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HEX Wars Battle Calculator</title>
-    <style>
-        body {
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
-
-        h1 {
-            text-align: center;
-            letter-spacing: 4px;
-            margin-bottom: 40px;
-        }
-
-        .section-header {
-            font-size: 24px;
-            font-weight: bold;
-            margin-top: 40px;
-            margin-bottom: 10px;
-        }
-
-        .attacker-header {
-            color: #ff4d4d;
-        }
-
-        .defender-header {
-            color: #66ff66;
-        }
-
-        label {
-            display: block;
-            margin-top: 10px;
-            font-weight: bold;
-        }
-
-        select {
-            width: 250px;
-            padding: 4px;
-            margin-bottom: 10px;
-            font-size: 14px;
-        }
-
-        input[type="number"] {
-            width: 60px;
-            padding: 4px;
-            margin-left: 10px;
-            font-size: 14px;
-        }
-
-        .unit-row {
-            display: flex;
-            align-items: center;
-            margin-bottom: 8px;
-        }
-
-        .battle-conditions {
-            margin-top: 40px;
-        }
-
-        #calculateBtn {
-            margin-top: 30px;
-            padding: 10px 20px;
-            background-color: #333;
-            color: white;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-        }
-
-        #results {
-            margin-top: 30px;
-            white-space: pre-wrap;
-            background-color: #222;
-            padding: 15px;
-            border-radius: 5px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <!-- Logo -->
+    <div class="logo-container">
+        <img src="static/images/logo.jpg" alt="HEX Wars Logo" class="logo-image" />
+    </div>
+
     <h1>HEX WARS BATTLE CALCULATOR</h1>
+
+    <!-- factions.html -->
+    <!-- <div style="text-align: center; margin-bottom: 20px;">
+        <a href="factions.html">
+            <button
+                style="padding: 10px 20px; font-size: 16px; background-color: #444; color: white; border: none; cursor: pointer;">
+                View Factions
+            </button>
+        </a>
+    </div> -->
+
 
     <div class="section-header attacker-header">Attacker</div>
     <label for="attackerFaction">Faction:</label>
