--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </div> -->
 
 
-    <div class="section-header attacker-header">Attacker</div>
+    <div class="section-header attacker-header">💥 Attacker 💥</div>
     <label for="attackerFaction">Faction:</label>
     <select id="attackerFaction" onchange="updateUnitLabels('attacker')">
         <option value="Dominion">Dominion</option>
@@ -37,10 +37,19 @@
         <option value="Vanguard">Vanguard</option>
         <option value="Damned">Damned</option>
     </select>
-
     <div id="attackerUnits"></div>
 
-    <div class="section-header defender-header">Defender</div>
+    <!-- Leader Inputs (Attacker) -->
+    <div class="leader-section">
+        <label for="attackerLeader">Leader:</label>
+        <select id="attackerLeader" onchange="toggleLeaderCheckbox('attacker')"></select>
+        <div id="attackerLeaderCheckboxContainer">
+            <label><input type="checkbox" id="attackerLeaderActive"> Leader Ability Active</label>
+        </div>
+    </div>
+
+
+    <div class="section-header defender-header">🛡️ Defender 🛡️</div>
     <label for="defenderFaction">Faction:</label>
     <select id="defenderFaction" onchange="updateUnitLabels('defender')">
         <option value="Dominion">Dominion</option>
@@ -52,6 +61,27 @@
     </select>
 
     <div id="defenderUnits"></div>
+
+    <!-- Leader Inputs (Defender) -->
+    <div class="leader-section">
+        <label for="defenderLeader">Leader:</label>
+        <select id="defenderLeader" onchange="toggleLeaderCheckbox('defender')"></select>
+
+        <div id="defenderLeaderCheckboxContainer">
+            <label>
+                <input type="checkbox" id="defenderLeaderActive"> Leader Ability Active
+            </label>
+        </div>
+    </div>
+
+    <!-- Supporters Section -->
+    <div class="section-header" style="color: gold; display: flex; align-items: center; gap: 10px;">
+        🟡 Supporting Army 🟡
+        <button onclick="addSupporter()" style="padding: 5px 10px; font-size: 14px; cursor: pointer;">➕ Add
+            Supporter</button>
+        <span style="font-size: 14px; color: #ccc;">(Select if there are supporting armies)</span>
+    </div>
+    <div id="supportersContainer"></div>
 
     <div class="battle-conditions">
         <label>Attacking From:</label>
@@ -91,6 +121,16 @@
     <div id="results"></div>
 
     <script>
+        const leaderMap = {
+            "Dominion": ["Legionaire", "Imperial guard"],
+            "Raiders": ["Lord of the Swamp", "Lord of the Tides"],
+            "HORDE": ["Shaiyan Battleborn", "Throgg Stoneface"],
+            "Ironborne": ["Silverbolt", "Guardian"],
+            "Vanguard": ["Duke", "Cavguard"],
+            "Damned": ["Plaguebringer", "Banshee King"]
+        };
+
+
         const unitMap = {
             "Dominion": ["Ranger", "Sentinel", "Siege Tower", "Corvette", "Galley"],
             "Raiders": ["Raider", "Hunter", "Ballista", "Maurader", "Bireme"],
@@ -100,10 +140,22 @@
             "Damned": ["Thrall", "Lost Soul", "Harvestor", "Dreadnaught", "Haunter"]
         };
 
+        function toggleLeaderCheckbox(side) {
+            const leaderSelect = document.getElementById(`${side}Leader`);
+            const checkboxContainer = document.getElementById(`${side}LeaderCheckboxContainer`);
+
+            if (leaderSelect.value === "") {
+                checkboxContainer.style.display = "none";
+            } else {
+                checkboxContainer.style.display = "block";
+            }
+        }
+
         function updateUnitLabels(side) {
             const faction = document.getElementById(`${side}Faction`).value;
             const container = document.getElementById(`${side}Units`);
             const unitTypes = unitMap[faction];
+            const leaderDropdown = document.getElementById(`${side}Leader`);
 
             container.innerHTML = "";
             unitTypes.forEach(unit => {
@@ -123,34 +175,204 @@
                 row.appendChild(input);
                 container.appendChild(row);
             });
+
+            // 🔄 Update leader dropdown
+            if (leaderDropdown) {
+                leaderDropdown.innerHTML = "";
+
+                // Add "None" option
+                const noneOption = document.createElement("option");
+                noneOption.value = "";
+                noneOption.textContent = "None";
+                leaderDropdown.appendChild(noneOption);
+
+                // Add faction leaders
+                if (leaderMap[faction]) {
+                    leaderMap[faction].forEach(leader => {
+                        const option = document.createElement("option");
+                        option.value = leader;
+                        option.textContent = leader;
+                        leaderDropdown.appendChild(option);
+                        noneOption.selected = true;
+                    });
+                }
+            }
+            toggleLeaderCheckbox(side);
         }
 
         function gatherArmyData(side) {
             const faction = document.getElementById(`${side}Faction`).value;
             const inputs = document.getElementById(`${side}Units`).querySelectorAll("input");
-            let army = [faction];
+
+            const units = [];
             inputs.forEach(input => {
                 const unit = input.dataset.unitName;
                 const qty = parseInt(input.value || 0);
                 if (qty > 0) {
-                    army.push(`${unit} x${qty}`);
+                    units.push(`${unit} x${qty}`);
                 }
             });
-            console.log(`[${side.toUpperCase()}] Army Data:`, army);
-            return army;
+
+            return {
+                faction: faction,
+                origin_tile: document.getElementById(side === "attacker" ? "attackingFrom" : "battleTile").value,
+                building: document.getElementById(`${side}Building`).value,
+                leader: document.getElementById(`${side}Leader`)?.value || null,
+                leader_ability_active: document.getElementById(`${side}LeaderActive`)?.checked || false,
+                units: units
+            };
         }
+
+        function gatherSupporterData() {
+            const supporterDivs = document.querySelectorAll(".supporter-card");
+            const supporters = [];
+
+            supporterDivs.forEach((div) => {
+                const faction = div.querySelector(".supporter-faction").value;
+                const supportingSide = div.querySelector(".supporting-side").value;
+                const origin_tile = div.querySelector(".supporter-origin").value;
+                const building = div.querySelector(".supporter-building").value || null;
+                const leader = div.querySelector(".supporter-leader").value || null;
+                const leader_ability_active = div.querySelector(".supporter-leader-active").checked;
+
+                const unitInputs = div.querySelectorAll(".supporter-units input");
+                const units = [];
+                unitInputs.forEach(input => {
+                    const unitName = input.dataset.unitName;
+                    const qty = parseInt(input.value || 0);
+                    if (qty > 0) {
+                        units.push(`${unitName} x${qty}`);
+                    }
+                });
+
+                if (faction && supportingSide && units.length > 0) {
+                    supporters.push({
+                        faction,
+                        supporting: supportingSide,
+                        origin_tile,
+                        building,
+                        leader,
+                        leader_ability_active,
+                        units
+                    });
+                }
+            });
+
+            return supporters;
+        }
+
+        function addSupporter() {
+            const container = document.getElementById("supportersContainer");
+
+            const supporterId = Date.now(); // unique ID
+            const div = document.createElement("div");
+            div.classList.add("supporter-card");
+            div.style.border = "1px solid gold";
+            div.style.padding = "10px";
+            div.style.margin = "10px 0";
+
+            div.innerHTML = `
+                <label>Faction:</label>
+                <select class="supporter-faction" onchange="updateSupporterUnits(this, ${supporterId})">
+                    ${Object.keys(unitMap).map(f => `<option value="${f}">${f}</option>`).join("")}
+                </select>
+
+                <label>Supports:</label>
+                <select class="supporting-side">
+                    <option value="attackers">Attackers</option>
+                    <option value="defenders">Defenders</option>
+                </select>
+
+                <label>Origin Tile:</label>
+                <select class="supporter-origin">
+                    <option value="Plains">Plains</option>
+                    <option value="Forest">Forest</option>
+                    <option value="Hills">Hills</option>
+                    <option value="Sea">Sea</option>
+                </select>
+
+                <label>Building:</label>
+                <select class="supporter-building">
+                    <option value="None">None</option>
+                    <option value="Castle">Castle</option>
+                    <option value="Outpost">Outpost</option>
+                    <option value="Harbor">Harbor</option>
+                </select>
+
+                <label>Leader:</label>
+                <select class="supporter-leader"></select>
+
+                <label>
+                    <input type="checkbox" class="supporter-leader-active"> Leader Ability Active
+                </label>
+
+                <div class="supporter-units" id="supporter-units-${supporterId}"></div>
+                <button onclick="this.closest('.supporter-card').remove()" style="margin-top: 10px; background-color: red; color: white; border: none; padding: 5px 10px; cursor: pointer;">🗑️ Remove Supporter</button>
+            `;
+
+            container.appendChild(div);
+
+            // Trigger unit population on initial load
+            updateSupporterUnits(div.querySelector(".supporter-faction"), supporterId);
+        }
+
+        function updateSupporterUnits(selectElement, supporterId) {
+            const faction = selectElement.value;
+            const unitList = unitMap[faction] || [];
+            const unitContainer = document.getElementById(`supporter-units-${supporterId}`);
+            const leaderDropdown = selectElement.parentElement.querySelector(".supporter-leader");
+
+            // Units
+            unitContainer.innerHTML = "";
+            unitList.forEach(unit => {
+                const row = document.createElement("div");
+                row.classList.add("unit-row");
+
+                const label = document.createElement("label");
+                label.textContent = unit;
+
+                const input = document.createElement("input");
+                input.type = "number";
+                input.min = 0;
+                input.placeholder = "Qty";
+                input.dataset.unitName = unit;
+
+                row.appendChild(label);
+                row.appendChild(input);
+                unitContainer.appendChild(row);
+            });
+
+            // Leaders
+            leaderDropdown.innerHTML = "";
+
+            // Add "None" option
+            const noneOption = document.createElement("option");
+            noneOption.value = "";
+            noneOption.textContent = "None";
+            leaderDropdown.appendChild(noneOption);
+            noneOption.selected = true;
+
+            // Add leaders for the selected faction
+            if (leaderMap[faction]) {
+                leaderMap[faction].forEach(leader => {
+                    const option = document.createElement("option");
+                    option.value = leader;
+                    option.textContent = leader;
+                    leaderDropdown.appendChild(option);
+                });
+            }
+
+        }
+
 
         async function submitBattle() {
             const attackers = gatherArmyData("attacker");
             const defenders = gatherArmyData("defender");
-            const battle_conditions = {
-                attacking_from: document.getElementById("attackingFrom").value,
-                battle_tile: document.getElementById("battleTile").value,
-                attacker_building: document.getElementById("attackerBuilding").value,
-                defender_building: document.getElementById("defenderBuilding").value
-            };
+            const supporters = gatherSupporterData();  // ⬅️ This should come before fetch
 
-            console.log("Sending Battle Conditions:", battle_conditions);
+            console.log("Sending Attackers:", attackers);
+            console.log("Sending Defenders:", defenders);
+            console.log("Sending Supporters:", supporters);
 
             const response = await fetch("https://hexwars-api.onrender.com/calculate_battle", {
                 method: "POST",
@@ -159,8 +381,17 @@
                     "Content-Type": "application/json",
                     "Accept": "application/json"
                 },
-                body: JSON.stringify({ attackers, defenders, battle_conditions })
+                body: JSON.stringify({
+                    attackers: attackers,
+                    defenders: defenders,
+                    supporters: supporters
+                })
             });
+
+            if (!response.ok) {
+                document.getElementById("results").textContent = "❌ Error submitting battle. Try again.";
+                return;
+            }
 
             const data = await response.json();
 
@@ -182,6 +413,8 @@
 
             document.getElementById("results").textContent = resultsText;
         }
+
+
 
         updateUnitLabels('attacker');
         updateUnitLabels('defender');
