Added button for factions view

--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
     <h1>HEX WARS BATTLE CALCULATOR</h1>
 
     <!-- factions.html -->
-    <!-- <div style="text-align: center; margin-bottom: 20px;">
+    <div style="text-align: center; margin-bottom: 20px;">
         <a href="factions.html">
             <button
                 style="padding: 10px 20px; font-size: 16px; background-color: #444; color: white; border: none; cursor: pointer;">
                 View Factions
             </button>
         </a>
-    </div> -->
+    </div>
 
 
     <div class="section-header attacker-header">💥 Attacker 💥</div>
