Fixed Maurader to Marauder

--- a/public/index.html
+++ b/public/index.html
@@ -133,7 +133,7 @@
 
         const unitMap = {
             "Dominion": ["Ranger", "Sentinel", "Siege Tower", "Corvette", "Galley"],
-            "Raiders": ["Raider", "Hunter", "Ballista", "Maurader", "Bireme"],
+            "Raiders": ["Raider", "Hunter", "Ballista", "Marauder", "Bireme"],
             "HORDE": ["Bearzerker", "Yotes", "Battering Ram", "Warship", "Karve"],
             "Ironborne": ["Guardian", "Crossbowmen", "Trebuchet", "Ironclad", "Cruiser"],
             "Vanguard": ["Swordsman", "Knight", "Catapult", "Destroyer", "Frigate"],
