battle results looks terrible

--- a/public/index.html
+++ b/public/index.html
@@ -455,7 +455,7 @@
 
                         ${data.special_results ? `
                             <div class="special-results">
-                                <h3 style="color: #ffd700; margin-top: 20px;">✨ BATTLE RESULTS ✨</h3>
+                                <h3 style="color: #ffd700; margin-top: 20px;">✨ ADDITIONAL RESULTS ✨</h3>
                                 <div style="margin-left: 20px;">
                                     ${data.special_results.lost_souls ? `<p>Lost Souls Collected: ${data.special_results.lost_souls}</p>` : ''}
                                     ${data.special_results.resources_collected ? `
