Update to faction table

--- a/public/factions.html
+++ b/public/factions.html
@@ -58,14 +58,87 @@
             based on army composition, the Vanguard is a perfect well-rounded and formidable force. Join us, General,
             and let the legacy of the Vanguard be written in the annals of history.
         </p>
-        <ul>
-            <h2 class="vanguard">Vanguard Units</h2>
-            <li>Swordsman</li>
-            <li>Knight</li>
-            <li>Catapult</li>
-            <li>Destroyer</li>
-            <li>Frigate</li>
-        </ul>
+        <h2 class="vanguard">Vanguard Units</h2>
+        <table class="unit-table">
+            <thead>
+                <tr>
+                <th>Unit Name</th>
+                <th>Ability</th>
+                <th>Attack</th>
+                <th>Defense</th>
+                <th>Support</th>
+                <th>Siege</th>
+                <th>Movement</th>
+                <!-- If you have additional columns, insert more <th> … </th> here -->
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td>Swordsman</td>
+                <td>Can claim land and buildings</td>
+                <td>2</td>
+                <td>3</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>1</td>
+                </tr>
+                <tr>
+                <td>Knight</td>
+                <td>After winning a battle, all knights can charge the retreating enemy. During the charge you take no losses to knights.</td>
+                <td>3</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Catapult</td>
+                <td>Reduces defensive buildings bonus by 10%</td>
+                <td>3</td>
+                <td>1</td>
+                <td>2</td>
+                <td>10%</td>
+                <td>1</td>
+                </tr>
+                <tr>
+                <td>Destroyer</td>
+                <td>N/A</td>
+                <td>3</td>
+                <td>3</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Frigate</td>
+                <td>Reduces defensive buildings bonus by 8%</td>
+                <td>1</td>
+                <td>1</td>
+                <td>2</td>
+                <td>8%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Duke</td>
+                <td>Provides a bonus combat modifier to his armies attack power and defense when all ground units are included. (Swordsman, Knight, and Catapult) Attack +15% | Defense +10%</td>
+                <td>2</td>
+                <td>3</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>1</td>
+                </tr>
+                <tr>
+                <td>Scout</td>
+                <td>Converts all swordsmen into archers</td>
+                <td>2</td>
+                <td>1</td>
+                <td>2</td>
+                <td>0%</td>
+                <td>2</td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- ▲▲▲ End of new TABLE ▲▲▲ -->
     </div>
 
     <div class="faction">
@@ -83,14 +156,86 @@
             agility and strategic positioning, the Raiders will carry you to victory across the waves. The sea is
             calling—let us answer with cold steel!
         </p>
-        <ul>
-            <h2 class="raiders">Raiders Units</h2>
-            <li>Raider</li>
-            <li>Hunter</li>
-            <li>Ballista</li>
-            <li>Maurader</li>
-            <li>Bireme</li>
-        </ul>
+        <h2 class="raiders">Raiders Units</h2>
+        <table class="unit-table">
+            <thead>
+                <tr>
+                <th>Unit Name</th>
+                <th>Ability</th>
+                <th>Attack</th>
+                <th>Defense</th>
+                <th>Support</th>
+                <th>Siege</th>
+                <th>Movement</th>
+                <!-- If you have additional columns, insert more <th> … </th> here -->
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <td>Raider</td>
+                <td>N/A</td>
+                <td>2</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Hunter</td>
+                <td>N/A</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+                <td>0%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Ballista</td>
+                <td>Reduces defensive buildings bonus by 8%</td>
+                <td>2</td>
+                <td>2</td>
+                <td>1</td>
+                <td>8%</td>
+                <td>2</td>
+                </tr>   
+                <tr>
+                <td>Maurader</td>
+                <td>N/A</td>
+                <td>2</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>3</td>
+                </tr>   
+                <tr>
+                <td>Bireme</td>
+                <td>Reduces defensive buildings bonus by 8%</td>
+                <td>1</td>
+                <td>1</td>
+                <td>2</td>
+                <td>8%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Lord of the Swamp</td>
+                <td>Allows army to cross rivers</td>
+                <td>2</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>2</td>
+                </tr>
+                <tr>
+                <td>Lord of the Tides</td>
+                <td>Increases all attacking Marauder damage by +1 each</td>
+                <td>3</td>
+                <td>2</td>
+                <td>0</td>
+                <td>0%</td>
+                <td>3</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <div class="faction">
