--- a/public/index.html
+++ b/public/index.html
@@ -106,6 +106,9 @@
             <option value="Castle">Castle</option>
             <option value="Outpost">Outpost</option>
             <option value="Harbor">Harbor</option>
+            <option value="Castle Adjacent">Castle Adjacent</option>
+            <option value="Outpost Adjacent">Outpost Adjacent</option>
+            <option value="Harbor Adjacent">Harbor Adjacent</option>
         </select>
 
         <label>Defender Building:</label>
@@ -114,6 +117,9 @@
             <option value="Castle">Castle</option>
             <option value="Outpost">Outpost</option>
             <option value="Harbor">Harbor</option>
+            <option value="Castle Adjacent">Castle Adjacent</option>
+            <option value="Outpost Adjacent">Outpost Adjacent</option>
+            <option value="Harbor Adjacent">Harbor Adjacent</option>
         </select>
     </div>
 
@@ -297,6 +303,9 @@
                     <option value="Castle">Castle</option>
                     <option value="Outpost">Outpost</option>
                     <option value="Harbor">Harbor</option>
+                    <option value="Castle Adjacent">Castle Adjacent</option>
+                    <option value="Outpost Adjacent">Outpost Adjacent</option>
+                    <option value="Harbor Adjacent">Harbor Adjacent</option>
                 </select>
 
                 <label>Leader:</label>
