Removed Cavguard for Archer

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,7 @@
             "Raiders": ["Lord of the Swamp", "Lord of the Tides"],
             "HORDE": ["Shaiyan Battleborn", "Throgg Stoneface"],
             "Ironborne": ["Silverbolt", "Guardian"],
-            "Vanguard": ["Duke", "Cavguard"],
+            "Vanguard": ["Duke", "Archer"],
             "Damned": ["Plaguebringer", "Banshee King"]
         };
 
