Dominion to Empire

--- a/public/factions.html
+++ b/public/factions.html
@@ -239,25 +239,25 @@
     </div>
 
     <div class="faction">
-        <h2 class="dominion">Dominion</h2>
+        <h2 class="empire">Empire</h2>
         <p><i>By the unwavering command of the High Council, you have been summoned to lead the Royal Army, a role
                 reserved only for the most exceptional of our kind. This is not a request but a decree from the highest
                 authority—your destiny has been chosen, and it is one of unparalleled honor and responsibility.</i>
             Lead our noble legions to glory and let the world tremble before our unparalleled power and grace. Embrace
-            the might of the Dominion, a faction that strikes hard and fast, leaving their enemies in ruin. The Dominion
+            the might of the Empire, a faction that strikes hard and fast, leaving their enemies in ruin. The Empire
             excels in high-damage attacks, though their units trade defense for speed and power. Central to their
             strategy is the Siege Tower, a unit with unparalleled defense that protects their more vulnerable forces.
             Push into enemy territory with these formidable towers, while your high-damage units dismantle the
-            opposition. The Dominion’s long-standing conflict with the HORDE has made them experts in warfare,
+            opposition. The Empire’s long-standing conflict with the HORDE has made them experts in warfare,
             granting a 10% attack and defense bonus when fighting against the vile HORDE. Additionally, their ranged
             units receive a bonus when fighting in forested areas, reflecting their deep connection to the natural
             world. With leaders who can
-            rain down volleys of arrows to weaken enemy forces or reduce infrastructure costs, the Dominion is ideal for
+            rain down volleys of arrows to weaken enemy forces or reduce infrastructure costs, the Empire is ideal for
             players who seek to overwhelm their foes with precision strikes.
-            The legacy of the Dominion stands eternal—lead us, and ensure our greatness endures for all time!
+            The legacy of the Empire stands eternal—lead us, and ensure our greatness endures for all time!
         </p>
         <ul>
-            <h2 class="dominion">Dominion Units</h2>
+            <h2 class="empire">Empire Units</h2>
             <li>Ranger</li>
             <li>Sentinel</li>
             <li>Siege Tower</li>
