FACTIONS OF HEX WARS

--- a/public/factions.html
+++ b/public/factions.html
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Title -->
-    <h1 style="text-align: center;">Factions of HEX Wars</h1>
+    <h1 style="text-align: center;">FACTIONS OF HEX WARS</h1>
 
     <!-- View Battle Calc Button -->
     <div style="text-align: center; margin-bottom: 20px;">
