--- a/public/index.html
+++ b/public/index.html
@@ -161,12 +161,14 @@
                         <label>Attacker Building:</label>
                         <select id="attackerBuilding">
                             <option value="None">None</option>
-                            <option value="Castle">Castle</option>
-                            <option value="Outpost">Outpost</option>
-                            <option value="Harbor">Harbor</option>
-                            <option value="Castle Adjacent">Castle Adjacent</option>
-                            <option value="Outpost Adjacent">Outpost Adjacent</option>
-                            <option value="Harbor Adjacent">Harbor Adjacent</option>
+                            <option value="Castle Garrison">Castle Garrison</option>
+                            <option value="Outpost Garrison">Outpost Garrison</option>
+                            <option value="Harbor Garrison">Harbor Garrison</option>
+                            <option value="Bloodshrine Garrison">Bloodshrine Garrison</option>
+                            <option value="Outer Castle">Outer Castle</option>
+                            <option value="Outer Outpost">Outer Outpost</option>
+                            <option value="Outer Harbor">Outer Harbor</option>
+                            <option value="Outer Bloodshrine">Outer Bloodshrine</option>
                         </select>
                     </div>
 
@@ -174,12 +176,14 @@
                         <label>Defender Building:</label>
                         <select id="defenderBuilding">
                             <option value="None">None</option>
-                            <option value="Castle">Castle</option>
-                            <option value="Outpost">Outpost</option>
-                            <option value="Harbor">Harbor</option>
-                            <option value="Castle Adjacent">Castle Adjacent</option>
-                            <option value="Outpost Adjacent">Outpost Adjacent</option>
-                            <option value="Harbor Adjacent">Harbor Adjacent</option>
+                            <option value="Castle Garrison">Castle Garrison</option>
+                            <option value="Outpost Garrison">Outpost Garrison</option>
+                            <option value="Harbor Garrison">Harbor Garrison</option>
+                            <option value="Bloodshrine Garrison">Bloodshrine Garrison</option>
+                            <option value="Outer Castle">Outer Castle</option>
+                            <option value="Outer Outpost">Outer Outpost</option>
+                            <option value="Outer Harbor">Outer Harbor</option>
+                            <option value="Outer Bloodshrine">Outer Bloodshrine</option>
                         </select>
                     </div>
                 </div>
@@ -397,12 +401,14 @@
                             <label>Building:</label>
                             <select class="supporter-building">
                                 <option value="None">None</option>
-                                <option value="Castle">Castle</option>
-                                <option value="Outpost">Outpost</option>
-                                <option value="Harbor">Harbor</option>
-                                <option value="Castle Adjacent">Castle Adjacent</option>
-                                <option value="Outpost Adjacent">Outpost Adjacent</option>
-                                <option value="Harbor Adjacent">Harbor Adjacent</option>
+                                <option value="Castle Garrison">Castle Garrison</option>
+                                <option value="Outpost Garrison">Outpost Garrison</option>
+                                <option value="Harbor Garrison">Harbor Garrison</option>
+                                <option value="Bloodshrine Garrison">Bloodshrine Garrison</option>
+                                <option value="Outer Castle">Outer Castle</option>
+                                <option value="Outer Outpost">Outer Outpost</option>
+                                <option value="Outer Harbor">Outer Harbor</option>
+                                <option value="Outer Bloodshrine">Outer Bloodshrine</option>
                             </select>
                         </div>
                     </div>
